@@ -1,27 +1,27 @@
 package com.freeline.domain.event.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
+import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
+import java.util.Optional;
 
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 
+import com.freeline.common.error.ErrorCode;
 import com.freeline.domain.event.dto.request.EventCreateReqDto;
+import com.freeline.domain.event.dto.response.EventDetailResDto;
 import com.freeline.domain.event.dto.response.EventListResDto;
 import com.freeline.domain.event.dto.response.EventResDto;
 import com.freeline.domain.event.entity.Event;
@@ -39,8 +39,7 @@ class EventServiceTest {
 	private EventService eventService;
 
 	@Test
-	void 행사_생성_성공() {
-		// given
+	void createEvent_success() {
 		final EventCreateReqDto request = EventCreateReqDto.builder()
 			.name("2026 SSAFY 도서 축제")
 			.description("다양한 IT 서적과 세미나를 즐길 수 있는 행사입니다.")
@@ -66,23 +65,20 @@ class EventServiceTest {
 			.status(EventStatus.DRAFT)
 			.build();
 
-		when(eventRepository.save(any(Event.class))).thenReturn(savedEvent);
+		Mockito.when(eventRepository.save(Mockito.any(Event.class))).thenReturn(savedEvent);
 
-		// when
 		final EventResDto result = eventService.createEvent(100L, request);
 
-		// then
-		assertThat(result.eventId()).isEqualTo(1L);
-		assertThat(result.status()).isEqualTo(EventStatus.DRAFT.name());
-		verify(eventRepository).save(any(Event.class));
+		Assertions.assertThat(result.eventId()).isEqualTo(1L);
+		Assertions.assertThat(result.status()).isEqualTo(EventStatus.DRAFT.name());
+		Mockito.verify(eventRepository).save(Mockito.any(Event.class));
 	}
 
 	@Test
-	void 행사_생성_실패_종료일이_시작일보다_빠름() {
-		// given
+	void createEvent_failWhenEndDateBeforeStartDate() {
 		final EventCreateReqDto request = EventCreateReqDto.builder()
-			.name("2026 SSAFY 도서 축제")
-			.description("다양한 IT 서적과 세미나를 즐길 수 있는 행사입니다.")
+			.name("2026 SSAFY 컨퍼런스")
+			.description("다양한 IT 지식과 네트워킹을 즐길 수 있는 행사입니다.")
 			.startDate(LocalDate.of(2026, 4, 3))
 			.endDate(LocalDate.of(2026, 4, 1))
 			.openTime(LocalTime.of(10, 0))
@@ -90,20 +86,18 @@ class EventServiceTest {
 			.locationAddress("서울특별시 강남구 테헤란로 123")
 			.build();
 
-		// when & then
-		assertThatThrownBy(() -> eventService.createEvent(100L, request))
-			.isInstanceOf(EventException.class)
-			.hasMessage("행사 종료일은 시작일보다 빠를 수 없습니다.");
+		Assertions.assertThatThrownBy(() -> eventService.createEvent(100L, request))
+			.isInstanceOfSatisfying(EventException.class, ex ->
+				Assertions.assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.INVALID_EVENT_PERIOD));
 	}
 
 	@Test
-	void 행사_목록_조회_성공_ALL_상태() {
-		// given
+	void getEvents_successForAllStatus() {
 		final PageRequest pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt"));
 		final Event event = Event.builder()
 			.id(1L)
 			.eventAdminId(100L)
-			.name("2026 SSAFY 도서 축제")
+			.name("2026 SSAFY 컨퍼런스")
 			.description("설명")
 			.startDate(LocalDate.of(2026, 4, 1))
 			.endDate(LocalDate.of(2026, 4, 3))
@@ -113,25 +107,22 @@ class EventServiceTest {
 			.thumbnailImageUrl(null)
 			.status(EventStatus.DRAFT)
 			.build();
-		setCreatedAt(event, LocalDateTime.of(2026, 3, 10, 14, 0));
+		setBaseEntityField(event, "createdAt", LocalDateTime.of(2026, 3, 10, 14, 0));
 
 		final Page<Event> eventPage = new PageImpl<>(List.of(event), pageable, 1);
-		when(eventRepository.findAll(pageable)).thenReturn(eventPage);
+		Mockito.when(eventRepository.findAll(pageable)).thenReturn(eventPage);
 
-		// when
 		final Page<EventListResDto> result = eventService.getEvents(100L, "ALL", 0, 10);
 
-		// then
-		assertThat(result.getContent()).hasSize(1);
-		assertThat(result.getContent().get(0).eventId()).isEqualTo(1L);
-		assertThat(result.getContent().get(0).status()).isEqualTo(EventStatus.DRAFT.name());
-		assertThat(result.getContent().get(0).thumbnailImageUrl()).isNull();
-		verify(eventRepository).findAll(pageable);
+		Assertions.assertThat(result.getContent()).hasSize(1);
+		Assertions.assertThat(result.getContent().getFirst().eventId()).isEqualTo(1L);
+		Assertions.assertThat(result.getContent().getFirst().status()).isEqualTo(EventStatus.DRAFT.name());
+		Assertions.assertThat(result.getContent().getFirst().thumbnailImageUrl()).isNull();
+		Mockito.verify(eventRepository).findAll(pageable);
 	}
 
 	@Test
-	void 행사_목록_조회_성공_상태_필터링() {
-		// given
+	void getEvents_successForStatusFilter() {
 		final PageRequest pageable = PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt"));
 		final Event event = Event.builder()
 			.id(2L)
@@ -142,38 +133,101 @@ class EventServiceTest {
 			.endDate(LocalDate.of(2026, 5, 2))
 			.openTime(LocalTime.of(9, 0))
 			.closeTime(LocalTime.of(17, 0))
-			.locationAddress("서울특별시 강남구 역삼동 456")
+			.locationAddress("서울특별시 강남구 삼성로 456")
 			.thumbnailImageUrl("https://example.com/images/job-fair.png")
 			.status(EventStatus.OPEN)
 			.build();
-		setCreatedAt(event, LocalDateTime.of(2026, 3, 10, 15, 0));
+		setBaseEntityField(event, "createdAt", LocalDateTime.of(2026, 3, 10, 15, 0));
 
 		final Page<Event> eventPage = new PageImpl<>(List.of(event), pageable, 1);
-		when(eventRepository.findAllByStatus(EventStatus.OPEN, pageable)).thenReturn(eventPage);
+		Mockito.when(eventRepository.findAllByStatus(EventStatus.OPEN, pageable)).thenReturn(eventPage);
 
-		// when
 		final Page<EventListResDto> result = eventService.getEvents(100L, "OPEN", 0, 10);
 
-		// then
-		assertThat(result.getContent()).hasSize(1);
-		assertThat(result.getContent().get(0).eventId()).isEqualTo(2L);
-		assertThat(result.getContent().get(0).status()).isEqualTo(EventStatus.OPEN.name());
-		verify(eventRepository).findAllByStatus(EventStatus.OPEN, pageable);
+		Assertions.assertThat(result.getContent()).hasSize(1);
+		Assertions.assertThat(result.getContent().getFirst().eventId()).isEqualTo(2L);
+		Assertions.assertThat(result.getContent().getFirst().status()).isEqualTo(EventStatus.OPEN.name());
+		Mockito.verify(eventRepository).findAllByStatus(EventStatus.OPEN, pageable);
 	}
 
 	@Test
-	void 행사_목록_조회_실패_잘못된_상태값() {
-		// when & then
-		assertThatThrownBy(() -> eventService.getEvents(100L, "INVALID", 0, 10))
-			.isInstanceOf(EventException.class)
-			.hasMessage("유효하지 않은 입력값입니다.");
+	void getEvents_failForInvalidStatus() {
+		Assertions.assertThatThrownBy(() -> eventService.getEvents(100L, "INVALID", 0, 10))
+			.isInstanceOfSatisfying(EventException.class, ex ->
+				Assertions.assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.INVALID_INPUT));
 	}
 
-	private void setCreatedAt(final Event event, final LocalDateTime createdAt) {
+	@Test
+	void getEventDetail_successWithoutBooths() {
+		final Event event = createOpenEvent(102L, 5L);
+		setBaseEntityField(event, "createdAt", LocalDateTime.of(2026, 3, 1, 10, 0));
+		setBaseEntityField(event, "updatedAt", LocalDateTime.of(2026, 3, 9, 8, 54));
+
+		Mockito.when(eventRepository.findById(102L)).thenReturn(Optional.of(event));
+
+		final EventDetailResDto result = eventService.getEventDetail(5L, 102L, false);
+
+		Assertions.assertThat(result.eventId()).isEqualTo(102L);
+		Assertions.assertThat(result.eventAdminId()).isEqualTo(5L);
+		Assertions.assertThat(result.name()).isEqualTo("2026 SSAFY 도서 축제");
+		Assertions.assertThat(result.status()).isEqualTo(EventStatus.OPEN.name());
+		Assertions.assertThat(result.booths()).isNull();
+		Assertions.assertThat(result.authCode()).isNull();
+		Assertions.assertThat(result.mapImageUrl()).isNull();
+		Mockito.verify(eventRepository).findById(102L);
+	}
+
+	@Test
+	void getEventDetail_successWithBooths() {
+		final Event event = createOpenEvent(102L, 5L);
+		Mockito.when(eventRepository.findById(102L)).thenReturn(Optional.of(event));
+
+		final EventDetailResDto result = eventService.getEventDetail(5L, 102L, true);
+
+		Assertions.assertThat(result.booths()).isNotNull().isEmpty();
+		Mockito.verify(eventRepository).findById(102L);
+	}
+
+	@Test
+	void getEventDetail_failWhenEventNotFound() {
+		Mockito.when(eventRepository.findById(999L)).thenReturn(Optional.empty());
+
+		Assertions.assertThatThrownBy(() -> eventService.getEventDetail(5L, 999L, false))
+			.isInstanceOfSatisfying(EventException.class, ex ->
+				Assertions.assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.EVENT_NOT_FOUND));
+	}
+
+	@Test
+	void getEventDetail_failWhenAccessDenied() {
+		final Event event = createOpenEvent(102L, 7L);
+		Mockito.when(eventRepository.findById(102L)).thenReturn(Optional.of(event));
+
+		Assertions.assertThatThrownBy(() -> eventService.getEventDetail(5L, 102L, false))
+			.isInstanceOfSatisfying(EventException.class, ex ->
+				Assertions.assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.ACCESS_DENIED));
+	}
+
+	private Event createOpenEvent(final Long eventId, final Long eventAdminId) {
+		return Event.builder()
+			.id(eventId)
+			.eventAdminId(eventAdminId)
+			.name("2026 SSAFY 도서 축제")
+			.description("IT 서적과 굿즈를 만날 수 있는 특별한 전시회입니다.")
+			.startDate(LocalDate.of(2026, 4, 1))
+			.endDate(LocalDate.of(2026, 4, 3))
+			.openTime(LocalTime.of(9, 0))
+			.closeTime(LocalTime.of(18, 0))
+			.locationAddress("서울특별시 강남구 테헤란로 212")
+			.thumbnailImageUrl("https://cdn.freeline.com/thumb.jpg")
+			.status(EventStatus.OPEN)
+			.build();
+	}
+
+	private void setBaseEntityField(final Event event, final String fieldName, final LocalDateTime value) {
 		try {
-			final java.lang.reflect.Field field = event.getClass().getSuperclass().getDeclaredField("createdAt");
+			final Field field = event.getClass().getSuperclass().getDeclaredField(fieldName);
 			field.setAccessible(true);
-			field.set(event, createdAt);
+			field.set(event, value);
 		} catch (ReflectiveOperationException ex) {
 			throw new IllegalStateException(ex);
 		}
